<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_turtlebot_practice</name>
  <version>0.0.0</version>
  <description>practice using turtlebot in ros2</description>
  <maintainer email="longhongc@gmail.com">longhongc</maintainer>
  <license>BSDv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>turtlebot3_gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
